--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<img src="img/ft-3.svg" alt="">
 					</div>
 					<h5 class="ft-badge__title">See report</h5>
-					<p class="ft-badge__desc">You receive a personalized fluency report for each student</p>
+					<p class="ft-badge__desc">You receive a personalized fluency report for each student.</p>
 				</div>
 			</div>
 
