--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<img src="img/ft-2.svg" alt="">
 					</div>
 					<h5 class="ft-badge__title">Assess automatically</h5>
-					<p class="ft-badge__desc">Your student reads a short leveled passage.</p>
+					<p class="ft-badge__desc">Your student reads a short leveled passage</p>
 				</div>
 			</div>
 
