--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 					<div class="ft-badge__img">
 						<img src="img/ft-1.svg" alt="">
 					</div>
-					<h5 class="ft-badge__title">Sign up</h5>
-					<p class="ft-badge__desc">Integrate with Google Classroom in seconds.</p>
+					<h5 class="ft-badge__title">1. Sign up</h5>
+					<p class="ft-badge__desc">Integrate with Google Classroom in seconds</p>
 				</div>
 			</div>
 			
@@ -66,7 +66,7 @@
 					<div class="ft-badge__img">
 						<img src="img/ft-2.svg" alt="">
 					</div>
-					<h5 class="ft-badge__title">Assess automatically</h5>
+					<h5 class="ft-badge__title">2. Assess automatically</h5>
 					<p class="ft-badge__desc">Your student reads a short leveled passage</p>
 				</div>
 			</div>
@@ -77,8 +77,8 @@
 					<div class="ft-badge__img">
 						<img src="img/ft-3.svg" alt="">
 					</div>
-					<h5 class="ft-badge__title">See report</h5>
-					<p class="ft-badge__desc">You receive a personalized fluency report for each student.</p>
+					<h5 class="ft-badge__title">3. See report</h5>
+					<p class="ft-badge__desc">You receive a personalized fluency report for each student</p>
 				</div>
 			</div>
 
@@ -88,7 +88,7 @@
 					<div class="ft-badge__img">
 						<img src="img/ft-4.svg" alt="">
 					</div>
-					<h5 class="ft-badge__title">Get leveled reading</h5>
+					<h5 class="ft-badge__title">4. Get leveled reading</h5>
 					<p class="ft-badge__desc">Once assessed, your student gets access to a library of leveled stories</p>
 				</div>
 			</div>
@@ -100,14 +100,17 @@
 	<section class="container description-1">
 		<div class="row middle-md center-xs">
 			<div class="col-md-4 col-md-offset-1 col-xs-11 last">
-				<h3>Know your student's reading level. Always.</h3>
+				<h3>Know your students' reading level. Always.</h3>
 				<p>
-					In just 5 minutes you can know your students key reading metrics:
+					In just 5 minutes you can know your students' key reading metrics:
 				</p>
 				<ul>
 					<li>Grade Reading Level</li>
-					<li>Lexile </li>
+					<li>Lexile</li>
 					<li>Words Correct per Minute</li>
+					<li>Words per Minute</li>
+				</ul>
+					You can then easily group your students within the platform 
 				</ul>
 			</div>
 			<div class="col-md-7 center-md first">
@@ -124,11 +127,11 @@
 				<img class="hero__mockup" src="img/phone-2-wbg.png" alt="">
 			</div>
 			<div class="col-md-4 col-xs-11">
-				<h3>Your students get books at their level. Always.</h3>
+				<h3>Your students automatically get books at their level. Always.</h3>
 				<p>
 					After each assessment, your students gain
 					access to a leveled reading library so they can 
-					continuously grow their love for reading.
+					continuously grow their love for reading
 				</p>
 			</div>
 		</div>
@@ -138,7 +141,7 @@
 	<section id="subscribe" class="container fluid footer">
 		<div class="row center-sm">
 			<div class="col-xs-12">
-				<h3>Sign Up and be the first to try TeeRead!</h3>
+				<h3>Sign up and be the first to try TeeRead!</h3>
 			</div>
 		</div>
 		<div class="row center-sm">
