--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 					<a href="#subscribe" class="button">Join the waitlist</a>
 				</div>
 				<div class="col-md-5 col-md-offset-1 col-xs-12 end-md">
-					<div class="video-container">
+					<!-- <div class="video-container">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/HhTKDnOdsko" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</section>
